firefox overflow fixes

--- a/src/App.scss
+++ b/src/App.scss
@@ -13,6 +13,8 @@ $gray: rgba(128, 128, 128, 0.637);
 	::-webkit-scrollbar {
 		display: none;
 	}
+	scrollbar-width: none;
+	-ms-overflow-style: none;
 }
 body {
 	overflow: hidden !important;
@@ -508,7 +510,7 @@ a:hover {
 		}
 
 		.oneshare-logo {
-			margin-top: 80px;
+			margin-top: 30px;
 		}
 	}
 	.register-form {
@@ -566,14 +568,15 @@ a:hover {
 	}
 	.bg-color-device {
 		width: 100vw;
-		height: 35rem;
-		margin-top: -3rem;
+		height: 30rem;
 		left: 0;
 		background-color: rgba($red, 0.1);
 		position: absolute;
+		top: 34rem;
 		z-index: -1;
 		&#finish-page {
-			margin-top: 10vh;
+			top: 38rem;
+			height: 25rem;
 		}
 	}
 	.continue-registration {
@@ -701,6 +704,7 @@ a:hover {
 		height: 80vh;
 		left: 0;
 		position: absolute;
+		top: 35rem;
 		z-index: -1;
 		&#finish-page {
 			margin-top: 10vh;
